--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,7 @@
     <string name="nombre_ciudad">Nombre Ciudad</string>
     <string name="habitantes_ciudad">Habitantes Ciudad</string>
     <string name="id_provincia_ciudad">Id Provincia Ciudad</string>
+    <string name="descripcion_plus">descripcion plus</string>
+    <string name="descripcion_imagen1">descripcion_imagen1</string>
+    <string name="descripcion_reload">descripcion_reload</string>
 </resources>
